--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+/* Main Css */
 * {
     margin: 0;
     padding: 0;
@@ -15,6 +17,8 @@ p {
 a, .btn {
     transition: all 300ms ease;
 }
+
+/* Navigation Css */
 
 nav, .nav-links {
     display: flex;
@@ -43,15 +47,27 @@ a:hover {
     text-decoration-color: rgb(85, 85, 85);
     transition: text-decoration, text-decoration-color 1s ease;
 }
+.logo {
+    font-size: 1.5rem;
+}
+.logo:hover {
+    cursor: default;
+    font-size: 2.5rem;
+    transition: font-size 1s ease;
+}
 
-#hamburger-nav {
+/* Mobile navigation Css */
+
+#mobile-nav {
 display: none;
 }
-.hamburger-menu {
+
+.mobile-menu {
     position: relative;
     display: inline-block;
 }
-.hamburger-icon {
+
+.mobile-icon {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -59,3 +75,63 @@ display: none;
     width: 30px;
     cursor: pointer;
 }
+
+.mobile-icon span {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+    position: absolute;
+    top:100%;
+    right: 0;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+    list-style: none;
+}
+
+.menu-links.open {
+    max-height: 300px;
+}
+
+.mobile-icon.open span:first-child {
+    transform: rotate(45deg) translate(10px, 5px);
+}
+
+.mobile-icon.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.mobile-icon.open span:last-child {
+    transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.mobile-icon span:first-child {
+    transform: none;
+}
+.mobile-icon span:first-child {
+     opacity: 1;
+}
+.mobile-icon span:first-child {
+    transform: none;
+}
+
+/* Section */
